[package]
name = "task-wrestler"
version = "0.1.0"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
edition = "2018"

[[bin]]
name = "tw"
path = "src/main.rs"

[dependencies]
clap = "*"
termion = "*"
chrono = "*"
config = "*"

[dev-dependencies]
pretty_assertions = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
